--- a/sistema-de-controle-academico-old/pom.xml
+++ b/sistema-de-controle-academico-old/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>delta-mike</groupId>
-    <artifactId>sistema-de-controle-academico</artifactId>
+    <artifactId>sistema-de-controle-academico-old</artifactId>
     <version>1</version>
     <packaging>jar</packaging>
     <properties>
@@ -11,4 +11,5 @@
         <maven.compiler.target>17</maven.compiler.target>
         <exec.mainClass>deltamike.sistema.de.controle.academico.SistemaDeControleAcademico</exec.mainClass>
     </properties>
+    <name>sistema-de-controle-academico-old</name>
 </project>
