--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /sistema-de-controle-academico/target/
 /sistema-de-controle-academico-old/target/
 /sistema-de-controle-academico/nbproject/
+.idea\
