--- a/sistema-de-controle-academico/src/main/resources/application.properties
+++ b/sistema-de-controle-academico/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.datasource.url= jdbc:mysql://localhost:3306/scoa
-spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.username=${DB_USER:root}
+spring.datasource.password=${DB_PASSWORD:password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
