Refatorar POST Usuario
- Refatorar POST Usuario para incluir senhas encriptadas e utilizar DTOs que exponham menos informações.

- Adicionado dependência Lombok para facilitar futuro desenvolvimento

--- a/sistema-de-controle-academico/src/main/resources/application.properties
+++ b/sistema-de-controle-academico/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #Chave secreta para a geracao de tokens de sessao
 #em producao, substituir pela variavel do ambiente de mesmo nome
 api.security.token.secret=${JWT_SECRET:default-secret-key}
+
+logging.level.org.springframework.web: DEBUG
+logging.level.org.hibernate: DEBUG
