--- a/sistema-de-controle-academico/pom.xml
+++ b/sistema-de-controle-academico/pom.xml
@@ -63,6 +63,15 @@
 			<version>4.4.0</version>
 		</dependency>
 
+		<!-- Lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+
+
+
 	</dependencies>
 
 	<build>
